# WizAI

./: .env  Cargo.toml  README.md  example.env
schemas/: api_schema.json
server-template/: Cargo.toml  README.md
server-template/src/: code_template.html  code_template.rs  main.rs
src/: main.rs
src/ai_functions/: ai_func_managing.rs  aifunc_backend.rs  aifunc_frontend.rs  mod.rs
src/apis/: call_request.rs  mod.rs
src/helpers/: command_line.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  mod.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
