[package]
name = "web_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
rand = "0.8.5"
chrono = "0.4.38"
num-bigint = "0.4.6"
serde_with = "3.9.0"
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "1.0", features = ["default", "rustls"] }